# zip-stream

./: Cargo.toml  README.md
benches/: my_benchmark.rs
examples/: bench_flamegraph.rs  kappa.rs  one_by_one.rs  test.txt
src/: lib.rs  writer.rs  zip_impl.rs
src/compressor/: deflate.rs  mod.rs  store.rs
