[package]
name = "zip-stream"
version = "0.1.0"
authors = ["Zettroke <skorostnoy2000@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
time = "0.3.5"
byteorder = "1.4.3"
zip = "0.5.9"
walkdir = "2.3.1"
crc32fast = "1.2.1"
flate2 = "1.0.20"
flate2 = "1.0.22"

[profile.release]
debug = 1