[package]
name = "zip-stream"
version = "0.1.0"
authors = ["Zettroke <skorostnoy2000@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
time = "0.3.5"
byteorder = "1.4.3"
walkdir = "2.3.1"
crc32fast = "1.2.1"
flate2 = { version = "1.0.22", features = ["tokio"] }

[dev-dependencies]
zip = { version = "0.5.13", default-features = false, features = ["deflate"] }
criterion = "0.3"

[profile.release]
debug = 1